--- a/css/header.css
+++ b/css/header.css
@@ -1,7 +1,21 @@
 .header__container{
     display: flex;
+    justify-content: space-between;
     border-bottom: 2px   solid #AAAAAA;
     height: 126px;
+}
+@media (max-width:1440px){
+    .header__container{
+        height: 146px;
+    }
+}
+@media (max-width:1024px) {
+    .header__container{
+        height: 186px;
+    }
+    .hid{
+        display: none;
+    }
 }
 .header__title{
     line-height:0px;
@@ -14,20 +28,94 @@
     font-size: 18px;
     font-weight: 400;
 }
+
 .header__label__conteiner{
-    width: 400px;
-    padding-left: 10vw;
+    padding-left: 100px;
+    min-width: 400px;
     padding-top: 10px;
     height: 100%; 
     
 }
-.header__form{
-    margin-left: auto;
+@media (max-width:1440px) {
+    .header__label__conteiner{
+        padding-left: 10px;
+    }
 }
+.bugar{
+    display: none;
+    height: 40px;
+    width: 40px;
+    background: url('../img/hamburger.png') no-repeat center;
+    background-size: contain;
+    margin:auto 0;
+    cursor: pointer;  
+    border-radius: 10px;
+    transition: 0.3s all linear;
+}
+.bugar:hover{
+    background-color: white;
+}
+.shy{
+    background: url('../img/x.png') no-repeat center;
+    background-size: contain;
+}
+
+.bugar img{
+    height: 100%;
+    width: 100%;
+}
+@media (max-width:1440px) {
+    .bugar{
+        display: flex;
+    }
+}
+@media (max-width:1024px) {
+    .bugar{
+        margin-top: 20px;
+        height: 70px;
+        width: 70px;
+    }
+}
+.header__form{
+    width: 550px;
+    padding-right: 30px;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+}
+
+@media (max-width:1024px) {
+    .header__form{
+        flex-direction: column;
+        justify-content: start;
+        width:176px;
+    }
+}
+.form_cont{
+    margin-top: 10px;
+    display: flex;
+    justify-content: start;
+    flex-direction: column;
+    font-family: 'Inter', sans-serif;
+    color: #767676;
+    font-size: 14px;
+    
+}
+
 .header__form input{
-    width: 176px;
-    margin-left: 20px;
+    height: 32px;
+    margin-top: 5px;
+    max-width: 176px;
+    border: 2px solid #AAAAAA;
+    box-sizing: border-box;
+    border-radius: 4px;
 }
 .header__form__button{
-    width: 120px;
+    height: 32px;
+    width: 176px;
+    border: 2px solid #074EE8;
+    border-radius: 4px 0px 0px 4px;
+}
+.hid{
+    opacity: 0;
 }
