--- a/css/info.css
+++ b/css/info.css
@@ -1,24 +1,19 @@
 .info__container{
-    
     text-align: center;
-
-    float: left;
     min-height: 600px;
-
-    width: max(40%,650px);
-
+    max-width: 700px;
 }
 .info__name{
     color:#074EE8;
     font-size: 64px; 
 }
 .info__container__text{
+    
     line-height: 40px;
     text-align: left;
     padding: 40px;
     border: 1px   solid #AAAAAA;
-    margin:0 6%;
-    background-color: white;
+    background: #EEEEEE;
     color:#000000;
     font-size: 24px;
 }
