--- a/css/main.css
+++ b/css/main.css
@@ -3,3 +3,18 @@ body{
     background-color: #E0EAFF
     
 }
+.wrapper{
+    max-height: 100%;
+    overflow: hidden;
+}
+.content{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+@media (max-width:1440px) {
+    .content{
+        justify-content: space-around;
+        /* flex-wrap: wrap-reverse; */
+    }
+}
