--- a/css/info.css
+++ b/css/info.css
@@ -7,6 +7,16 @@
     color:#074EE8;
     font-size: 64px; 
 }
+@media (max-width:1024px) {
+    .info__name{
+        font-size: 48px; 
+    }
+}
+@media (max-width:768px) {
+    .info__name{
+        font-size: 32px; 
+    }
+}
 .info__container__text{
     
     line-height: 40px;
