--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -46,7 +46,8 @@
     height: 32px;
 }
 .sidebar__bugar{
-    width: 100%;
+    min-height: 100%;
+    min-width: 100%;
     visibility:hidden;
     position: absolute;
     background: rgba(0, 0, 0, 0.9);
