--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -25,9 +25,10 @@
 
 .sidebar__item{
     padding-top:10px;
+    padding-left: 5px;
     height: 36px;
     font-size: 16px;
-    text-indent: 48px;
+    /* text-indent: 48px; */
     text-align: left;
     list-style-type: none;
 }
