--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -62,6 +62,17 @@
     height: 40px;
     margin: auto;
 }
+@media (max-width:768px) {
+    .bugar__item{
+        height:60px;
+        font-size: 28px;
+    }
+}
+@media (max-width:320px) {
+    .bugar__item{
+        font-size: 20px;
+    }
+}
 @media (max-width:1440px) {
     .sidebar__bugar{
         display: inline;
