--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -83,3 +83,16 @@
         display: none;
     }
 }
+
+@media (min-width:1600px) {
+
+    .sidebar__containe{
+        width: 400px;
+    }
+    .sidebar__item{
+        padding-top:15px;
+        min-height:70px;
+        line-height: 35px;
+        font-size: 22px;
+    }
+}
