--- a/css/header.css
+++ b/css/header.css
@@ -89,12 +89,23 @@
         width: 70px;
     }
 }
+.header__form__button{
+    height: 32px;
+    width: 176px;
+    background-color: white;
+    color: #074EE8;
+    border-radius: 4px 0px 0px 4px;
+    cursor: pointer;
+}
 .header__form__button:hover{
     color:white;
     background-color: #074EE8;
-    border: white;
-    transition-duration: .5s;
-
+    box-shadow: 0px 0px 38px 0px #074EE8;
+    transition:all .3s;
+    transform: scale(1.05);
+}
+.header__form__button:active{
+    transform: scale(.95);
 }
 .header__form{
     width: 550px;
@@ -131,20 +142,21 @@
     
 }
 
-.header__form input{
+.header__form .header__form__button,.header__form__password,.header__form__username{
     height: 32px;
     margin-top: 5px;
     max-width: 176px;
-    border: 2px solid #AAAAAA;
+    border: 2px solid #074EE8;
     box-sizing: border-box;
     border-radius: 4px;
 }
-.header__form__button{
-    height: 32px;
-    width: 176px;
-    border: 2px solid #074EE8;
-    border-radius: 4px 0px 0px 4px;
+.autorization_fail{
+    border: 2px solid #df2f2f;
 }
+
+
+
+
 .hid{
     opacity: 0;
 }
